--- a/include/group.yaml
+++ b/include/group.yaml
@@ -93,3 +93,4 @@ group:
       ##############################
       - media_player.living_room_tv
       - media_player.living_room_shield
+      - media_player.master_bedroom_shield
