--- a/templates/select.yaml
+++ b/templates/select.yaml
@@ -7,7 +7,8 @@
         {% set recently_added = 'Last Added' %}
         {% set paused_timeout_minutes = 15 %}
         {% set media_players = [
-          states.media_player.living_room_shield ] %}
+          states.media_player.living_room_shield,
+          states.media_player.master_bedroom_shield ] %}
         {% macro media(state) %}
         {% set state = media_players | selectattr('state','eq',state) | list %}
         {% set last_changed = recently_added if state | length == 0 else state | map(attribute='last_changed') | list | max %}
@@ -29,7 +30,8 @@
       options: >
         {% set recently_added = ['Last Added'] %}
         {% set media_players = [
-          states.media_player.living_room_shield ] %}
+          states.media_player.living_room_shield,
+          states.media_player.master_bedroom_shield ] %}
         {{ recently_added + media_players | map(attribute='name') | list }}
       select_option:
         service: select.select_option
