Added scripts for display image and video on tv

--- a/popup/home_garage.yaml
+++ b/popup/home_garage.yaml
@@ -44,6 +44,6 @@ browser_mod:
 
       - type: 'custom:webrtc-camera'
         entity: camera.garage
-        poster: https://home-assistant.io/images/cast/splash.png
+        poster: /local/stream_loading.gif
         muted: true
         background: true
