--- a/include/scripts.yaml
+++ b/include/scripts.yaml
@@ -67,3 +67,51 @@ script:
         data:
           duration: 16000
           message: Restarting complete...
+
+  display_video_popup_on_tv:
+    alias: Display Video PIP Popup on TV
+    mode: single
+    variables:
+      link_id: '{% for _ in range(40) %}{{ range(10)|random }}{% endfor %}'
+    fields:
+      ip_addr:
+        description: "Ip Address of the Nvidia Shield"
+      camera:
+        description: "Camera ID"
+      msg:
+        description: "Message to display"
+      msg_title:
+        description: "Message title to display"
+    sequence:
+      - service: webrtc.create_link
+        data:
+          link_id: '{{ link_id }}'
+          entity: '{{ camera }}'
+          open_limit: 0
+          time_to_live: 60
+      - service: rest_command.pipup_url_on_tv
+        data:
+          ipaddress: '{{ ip_addr }}'
+          title: '{{ msg_title }}'
+          message: '{{ msg }}'
+          url: https://homeassistant.bridgehacker.com/webrtc/embed?url={{ link_id }}&webrtc=true
+
+  display_image_popup_on_tv:
+    alias: Display Image PIP Popup on TV
+    mode: single
+    fields:
+      ip_addr:
+        description: "Ip Address of the Nvidia Shield"
+      msg:
+        description: "Message to display"
+      msg_title:
+        description: "Message title to display"
+      img_url:
+        description: "The image URL to display"
+    sequence:
+      - service: rest_command.pipup_url_on_tv
+        data:
+          ipaddress: '{{ ip_addr }}'
+          title: '{{ msg_title }}'
+          message: '{{ msg }}'
+          url: '{{ img_url }}'
