replace deprecated data_template

--- a/automations/alerts.yaml
+++ b/automations/alerts.yaml
@@ -16,7 +16,7 @@
 
   action:
     service: notify.groot_automation
-    data_template:
+    data:
       title: "<b>Info</b>: New Home Assistant Version -> {{ trigger.from_state.state }} to {{ trigger.to_state.state }}"
       message: "Version <a href=\"https://github.com/home-assistant/core/releases/tag/{{states('sensor.hass_version_latest')}}\">{{states('sensor.hass_version_latest')}}</a> is available!"
 
@@ -45,7 +45,7 @@
 
   action:
     service: notify.groot_automation
-    data_template:
+    data:
       title: "<b>Info</b>: [{{ trigger.from_state.name }}] -> {{ trigger.from_state.state }} to {{ trigger.to_state.state }}"
       message: "<a href=\"{{state_attr(trigger.entity_id, 'html_url') }}\">{{trigger.to_state.state}}</a> is available!"
 
@@ -60,7 +60,7 @@
 
   action:
     service: notify.groot_automation
-    data_template:
+    data:
       title: "<b>Info</b>: New Device Detected"
       message: 'New device: {{ trigger.event.data.entity_id }}'
 
@@ -114,7 +114,7 @@
                     id: 'climate_to_cool'
             sequence:
               - service: notify.groot_automation
-                data_template:
+                data:
                   title: >
                     {{'\u1F6A8'}} Alert Thermostat Active {{'\u1F6A8'}}: Window / Door Open
                   message: >
@@ -131,7 +131,7 @@
                 id: 'rain_coming_prob'
             sequence:
               - service: notify.groot_automation
-                data_template:
+                data:
                   title: >
                     {{'\u1F327\uFE0F'}} Alert Rain Is Coming {{'\u1F327\uFE0F'}}: Window / Door Open'
                   message: >
@@ -148,7 +148,7 @@
                 id: 'close_house_down'
             sequence:
               - service: notify.groot_automation
-                data_template:
+                data:
                   title: >
                     {{'\u1F6A8'}} Alert {{'\u1F6A8'}}: Window / Door Open
                   message: >
@@ -175,7 +175,7 @@
 
   action:
     - service: notify.groot_automation
-      data_template:
+      data:
         title: '<b>Alert</b>: Low Battery'
         message: "Battery Report: {{ trigger.to_state.state }} \n The battery for {{ trigger.to_state.name }} is below 20 percent"
 
@@ -191,7 +191,7 @@
 
   action:
     - service: notify.groot_automation
-      data_template:
+      data:
         title: '{{ trigger.event.data.summary }}'
         message: '{{ trigger.event.data.summary_detail.value }}'
         data:
