--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -456,7 +456,7 @@ views:
                   attribute_two: sensor.template_weather_low_temp
 
               - type: custom:button-card
-                entity: sensor.garage_temp_temperature
+                entity: sensor.garage_temperature
                 name: Garage
                 tap_action:
                   action: none
