--- a/btn_card_templates/temperature.yaml
+++ b/btn_card_templates/temperature.yaml
@@ -32,17 +32,49 @@
       card:
         - color: > #rgba(157, 160, 162, 1) #rgba(84, 85, 85, 1) #rgba(85, 86, 86, 1)
             [[[
-              if (states['sun.sun'].state == 'below_horizon'){
+              if (entity.attributes.friendly_name == 'Home') {
+                if (entity.state == 'sunny') {
+                  return 'rgba(84, 85, 85, 1)';
+                } else {
+                  return 'rgba(255, 255, 255, 1)';
+                }
+                
+              } else if (states['sun.sun'].state == 'below_horizon') {
                 return 'rgba(157, 160, 162, 1)';
-              } else
+              } else {
                 return 'rgba(84, 85, 85, 1)';
-            ]]]  
+              }
+            ]]]
         - background: > # else linear-gradient(to top, rgba(123,168,197,0.8) 0%, rgba(61,132,176,0.8) 100%)
             [[[
-              if (states['sun.sun'].state == 'below_horizon'){
+              if (entity.attributes.friendly_name == 'Home') {
+                if (entity.state == 'sunny') {
+                  return 'url(/local/gifs/sunny.gif)';
+
+                } else if (entity.state == 'partlycloudy') {
+                  return 'url(/local/gifs/partlycloudy.gif)';
+
+                } else if (entity.state == 'rainy') {
+                  return 'url(/local/gifs/rainy.gif)';
+
+                } else if (entity.state == 'cloudy') {
+                  return 'url(/local/gifs/cloudy.gif)';
+  
+                } else if ((entity.state == 'sleet') || (entity.state == 'snow')) {
+                  return 'url(/local/gifs/snowy.gif)';
+
+                } else if (entity.state == 'clear-night') {
+                  return 'url(/local/gifs/clearnight.gif)';
+
+                } else {
+
+                  return 'linear-gradient(to top, rgb(123 168 197) 0%, #b0c5d3 100%)';
+                }
+              } else if (states['sun.sun'].state == 'below_horizon') {
                 return 'linear-gradient(to top, rgba(53,59,83,0.8) 0%, rgba(10,14,34,0.8) 100%)';
-              } else
+              } else {
                 return 'linear-gradient(to top, rgb(123 168 197) 0%, #b0c5d3 100%)';
+              }
             ]]]
           # return 'linear-gradient(to top, rgb(123 168 197) 0%, #b0c5d3 100%)'; --- rgb(213, 215, 216)
       name:
